--- a/Moringa_DS_Core_W8_Independent_Project_2021_04_Python_nb.ipynb
+++ b/Moringa_DS_Core_W8_Independent_Project_2021_04_Python_nb.ipynb
@@ -84,10 +84,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ILtq8--J2_lO"
+      },
+      "source": [
+        "Success on this research will be reached when an accurate prediction model is gotten and is to be used on the data. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "a9BPYqunry97"
       },
       "source": [
         "### c) Understanding the context "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I41nEo4v3TLR"
+      },
+      "source": [
+        "Nairobi Hospital conducted a clinical camp to test for hypothyroidism and the data collected focused on Thyroid patients. The healthcare datasets are to be used to build appropriate models."
       ]
     },
     {
@@ -102,10 +120,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "vuTR8ksQ29E1"
+      },
+      "source": [
+        "The experimental design taken is Independent measures done by random allocation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zSGyg6kWsBUl"
       },
       "source": [
         "### e) Data Relevance"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "39yE2-76269E"
+      },
+      "source": [
+        "The data provided is highly relevant and sufficient to the research because of the size and the content found in the columns."
       ]
     },
     {
